<resources>
    <string name="app_name"> Assignment 1 </string>
    <string name="hello_message"> Hello World! </string>
    <string name="button_text"> I\'m a button </string>
    <string name="login_text"> login </string>
    <string name="login_hint"> login name </string>
    <string name="password_text"> password </string>
    <string name="radio_btn_text"> RadioButton </string>
    <string name="check_box_text"> CheckBox </string>
    <string name="switch_text"> What does this do? </string>
    <string name="image_description"> Image </string>
    <string name="login_btn_text"> Login </string>
    <string name="dialog_title"> Do you want to quit this activity? </string>
    <string name="dialog_message"> Finished </string>
    <string name="ok"> Ok </string>
    <string name="cancel"> Cancel </string>
    <string name="toast_switch_on"> Switch is On </string>
    <string name="toast_switch_off"> Switch is Off </string>
    <string name="chat_button"> Start Chat </string>
    <string name="send_button"> Send </string>
    <string name="toolbar_one"> One </string>
    <string name="toolbar_two"> Two </string>
    <string name="toolbar_three"> Three </string>
    <string name="title_activity_test_toolbar"> TestToolbar </string>
    <string name="about"> About </string>
    <string name="snackbar_text_toolbar"> This is a snackbar </string>
    <string name="selected_toolbar_one"> You selected item 1 </string>
    <string name="selected_toolbar_two"> Do you want to go back? </string>
    <string name="about_toast_msg"> Version 1.0, by Aidan Traboulay</string>
</resources>